Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14517

QPrintPreviewDialog displays the second page instead of the first one when it is initially shown maximized.

    XMLWordPrintable

Details

    • Qt 5: 23fd348631cdec03736b5cd8bad2d877dddad38f

    Description

      When the QPrintPreviewDialog is shown as maximized by setting the window state, it displays page2. Should display page 1.
      test case attached.

      Attachments

        1. main.cpp
          1 kB
        2. printpreview.diff
          0.7 kB
        3. qtbug14517.tar
          10 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            7 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes