QPrintPreviewDialog displays the second page instead of the first one when it is initially shown maximized.

Task-number: QTBUG-14517